--- a/css/style.scss
+++ b/css/style.scss
@@ -99,11 +99,50 @@ h1 {
     }
   }
   .subblock-center {
-    //transition: 0.8s;
     margin-top: 25px;
     text-align: center;
     padding: none;
     margin: none;
+    //background: cyan;
+    .info-block {
+      //background: red;
+      display: block;
+      width: 60%;
+      position: absolute;
+      right: 0px;
+    }
+    .weather-block {
+      //background: blue;
+      display: block;
+      width: 40%;
+      position: absolute;
+      left: 0px;
+      border-right: 1px solid #ccc;
+      .icon {
+        width: 100%;
+        display: inline-block;
+        //background: yellow;
+        text-align: center;
+        font-size: 72px;
+        margin-top: -10px;
+      }
+      .text {
+        width: 100%;
+        display: inline-block;
+        margin-top: -5px;
+      //background: magenta;
+        text-align: center;
+        font-size: 60px;
+      }
+      .location {
+        font-size: 16px;
+        color: #ddd;
+        //background: red;
+        width: 100%;
+        text-align: center;
+        display: inline-block;
+      }
+    }
     .info-text{
       color: $primary;
       font-size: 42px;
